# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]


[project]
name = "stella-cli"
version = "0.1.0"
description = "STELLA is a multi-agent framework for creating and managing AI agents."
readme = "README.md"
authors = [{ name = "Philip Alm", email = "philip@norditech.se" },{name = "David Bacelj", email = "david.bacelj@norditech.se" },{name = "Fredric Lundberg", email = "fredric@norditech.se" }]
license = {text = "AGPL-3.0 & Enterprise License (contact to get license)"}
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["agent", "llm", "stella"]
dependencies = [
    'gevent >= 23.9.1',
    'Flask >= 3.0.0',
    'Flask-Cors >= 4.0.0',
    'Flask-JWT-Extended >= 4.5.3',
    'Flask-SocketIO >= 5.3.6',
    'python-dotenv >= 1.0.0',
    'bson >= 0.5.10',
    'pymongo >= 4.6.1',
    'openai >= 0.28.1',
    'bcrypt >= 4.0.1',
    'requests >= 2.31.0',
    'prompt-toolkit >= 3.0.43'
]

requires-python = "~=3.9, ~=3.10"


[project.urls]
Homepage = "https://github.com/Norditech-AB/STELLA"


[project.scripts]
stella = "cli.__main__:main"

