# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]


[project]
name = "stella-cli"
version = "0.1.0"
description = "STELLA is a multi-agent framework for creating and managing AI agents."
readme = "README.md"
authors = [
    {name = "Philip Alm", email = "philip@norditech.se" },
    {name = "David Bacelj", email = "david.bacelj@norditech.se" },
    {name = "Fredric Lundberg", email = "fredric@norditech.se" },
    {name = "Johan svensson", email = "johan@norditech.se" },
    {name = "Joona Bruckner", email = "joona@norditech.se" }
]
license = {text = "AGPL-3.0 & Enterprise License (contact to get license)"}
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Flask",
    "Operating System :: OS Independent"
]
keywords = ["agent", "llm", "stella"]
dependencies = [
    "pip >= 23.3.2",
    'gevent >= 23.9.1',
    'Flask >= 3.0.0',
    'Flask-Cors >= 4.0.0',
    'Flask-JWT-Extended >= 4.5.3',
    'Flask-SocketIO >= 5.3.6',
    'python-dotenv >= 1.0.0',
    'pymongo >= 4.6.1',
    'openai >= 1.6.1',
    'bcrypt >= 4.0.1',
    'requests >= 2.31.0',
    'prompt-toolkit >= 3.0.43',
    'yfinance >= 0.2.25',
    
    #windows only:
    'websocket-client >= 1.7.0',
    'gevent-websocket >= 0.10.1'
]

requires-python = ">=3.8,<=3.12.1"

[project.optional-dependencies]
dev = [
    "pip-tools",
    "Sphinx==7.2.6",
    "sphinx-tabs==3.4.4",
    "sphinx_design==0.5.0",
    "sphinxawesome-theme==5.0.1",
    "sphinxcontrib-applehelp==1.0.7",
    "sphinxcontrib-devhelp==1.0.5",
    "sphinxcontrib-htmlhelp==2.0.4",
    "sphinxcontrib-jsmath==1.0.1",
    "sphinxcontrib-qthelp==1.0.6",
    "sphinxcontrib-serializinghtml==1.1.9"
]


[project.urls]
Homepage = "https://stellaframework.com/"
Repository = "https://github.com/Norditech-AB/STELLA"
Documentation = "https://docs.stellaframework.com/"


[project.scripts]
stella = "cli.__main__:main"

